# CosmosAluminium

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: DECISIONS.md  HR-INTELLIGENCE-ANALYZER.md  HR-INTELLIGENCE-UNIFIED.md  IMPLEMENTATION-PHASES-1-4.md  IMPLEMENTATION-PLAN-HR-FIX.md  ISSUE-HR-INTELLIGENCE-ACCURACY.md  PHASE-1-2-IMPLEMENTATION.md  PROGRESS.md  SNAPSHOT-v1.1-pre-deployment.md
frontend/testing/: app.js  index.html  styles.css
frontend/testinggemini/: README.md  app.js  serve.py  styles.css
infra/terraform/: README.md  api_gateway.tf  api_gateway_testing.tf  cloudfront.tf  cognito.tf  dynamodb.tf  ec2_bastion.tf  iam.tf  lambda_cv_parser.tf  lambda_cv_processor.tf  lambda_db_init.tf  lambda_opensearch_init.tf  lambda_query.tf  lambda_tesseract_layer.tf  main.tf  opensearch.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
lambda/candidates/: handler.py
lambda/cv_parser/: handler.py  requirements.txt
lambda/cv_processor/: Dockerfile.layer  build-layer.ps1  build-layer.sh  handler.py  requirements.txt
lambda/db_init/: handler.py  requirements.txt
lambda/health/: handler.py
lambda/layers/tesseract/: Dockerfile  README.md  build.sh
lambda/opensearch_init/: handler.py  requirements.txt
lambda/query/: handler.py  requirements.txt
lambda/status/: handler.py
lambda/upload/: handler.py
prompts/cv_parsing/: v1.0.0.txt
prompts/job_matching/: v1.0.0.txt
prompts/job_parsing/: v1.0.0.txt
prompts/query_translation/: v1.0.0.txt
scripts/ci/: build-layers.sh
scripts/cleanup/: cleanup_cv_data.py
scripts/sql/: 001_extensions.sql  002_enum_types.sql  003_core_tables.sql  004_taxonomy_tables.sql  005_candidate_detail_tables.sql  006_job_tables.sql  007_matching_tables.sql  008_search_system_tables.sql  009_gdpr_tables.sql  010_functions.sql  011_triggers.sql  012_views.sql  013_initial_data.sql  014_unmatched_items.sql  015_taxonomy_enhancements.sql  016_unmatched_cv_data.sql  017_taxonomy_expansion.sql  017_taxonomy_expansion_fixed.sql  018_candidate_training.sql  019_job_matching.sql  019_job_matching_rollback.sql  020_software_categories.sql  021_comprehensive_taxonomy.sql  022_fix_match_method_constraint.sql  023_cv_quality_warnings.sql  024_backfill_duration_months.sql  024_backfill_duration_months_rollback.sql  verify_duration_fix.sql
src/lcmgo_cagenai/: __init__.py
src/lcmgo_cagenai/llm/: __init__.py  (+1 more)
testing/reports/: TEST-REPORT-2026-01-18-E2E-RUN2.md  TEST-REPORT-2026-01-18-E2E.md
tests/: __init__.py  test_code_paths.py  test_e2e_hr_intelligence.py  test_integration_hr_job.py  test_integration_query_hr.py  test_job_parser_paths.py  test_llm_provider.py
tests/unit/: test_dynamic_aliases.py  test_hr_intelligence.py  test_job_parser.py
(+36 files in other folders)
